# pptam-tool

./: .gitignore  .gitmodules  .gitmodules.old  .project  .style.yapf  Installation.md  Issues.md  LICENSE  LICENSE.txt  Mirai.md  README-REPLICATION-PACKAGE.md  README.md  Usage.md  agents.md  benchflow.sh  configuration.json  configuration.txt  pyproject.toml  requirements.txt  run.py  runPPTAM.py  todo.txt
analyze/: README.md  analysis.yml  calculate_aggregated_metrics.py  docker-compose.yml  import-faban.py  init.sql  run_analysis.sh  run_jupyter_notebook.sh
analyzer/: .library.json  BenchflowOutput.csv  OperationalProfileData.csv  README.md  computeDomainMetric.ipynb  computeDomainMetric_New.ipynb  computeDomainMetric_V2.ipynb
archive/: Issues.md  Mirai.md  README.md  Usage.md  analyze.sh
configuration/: README.md  configuration.ini  configuration.json  configuration.old.json  ini2json.py  measurementMetricTemplate.ini  measurementMetricTemplate.json  testCampaignConfWithMetricConfGenerated.ini  testCampaignConfWithMetricConfGenerated.json  testCampaignTemplate.ini  testCampaignTemplate.json  testPlan.json
configurationParser/: CommonMethods.py  Parser.py  ReadFromFile.py  WriteToFile.py
create/: README.md  createTestConfigurationInterfaceHandler.py  create_test.cmd  create_test.py  create_test.sh  create_test_plan.py  docker-compose.yml  ini2json.py  tools.py
db/: download_linux.sh  setup.sh
design/: configuration.ini  docker-compose-test.yml  docker-compose.yml  test_case.ini  test_plan.ini  (+2 more)
design copy/: configuration.ini  locustfile.py  test_plan.ini
(+3223 files in other folders)
