[project]
name = "PPTAM-TOOL"
version = "2.0.0"
description = "Tool for Production and Performance Testing Based Application Monitoring (pptam)."
authors = [
    "Alberto Avritzer <beto@esulabsolutions.com>",
    "Daniel Sadoc Menasche <sadoc@dcc.ufrj.br>",
    "Vilc Queupe Rufino <vilc@bol.com.br>",
    "Russo Barbara <Barbara.Russo@unibz.it>",
    "Andrea Janes <ajanes@unibz.it>",
    "Vincenzo Ferme <fermevincenzo@gmail.com>",
    "Andre van Hoorn <van.hoorn@informatik.uni-stuttgart.de>",
    "Henning Schulz <henning.schulz@novatec-gmbh.de>",
    "Jasmin.Jahic@iese.fraunhofer.de",
    "Camilli Matteo <Matteo.Camilli@unibz.it>"
]
license = ""
readme = "README.md"
python = "^3.7"